[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rctclient"
version = "0.0.5"
description = "Implementation of the RCT Power communication protocol"
authors = ["Stefan Valouch <svalouch@valouch.com>"]
readme = "README.md"
repository = "https://github.com/svalouch/python-rctclient/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "rctclient", from = "src" },
]

[tool.poetry.scripts]
rctclient = "rctclient.cli:cli [cli]"

[tool.poetry.extras]
cli = ["click"]

[tool.poetry.dependencies]
python = "^3.9"
click = { version = "^8.1", optional = true}

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^7"
sphinx-autodoc-typehints = "^1.24"
sphinx-click = "^5"
sphinx-rtd-theme = "^1.3"
recommonmark = "^0.7"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
# Allow lines to be as long as 120 characters
line-length = 120

[tool.ruff.per-file-ignores]
"src/rctclient/registry.py" = ["E241", "E501"]

